# webscraping

./: README.md  pyproject.toml
scripts/: run_scraper.py
src/webscraper/: scraper.py
