[project]
name = "webscraping"
version = "0.1.0"
description = ""
authors = [
    {name = "Berk Ceyhan",email = "berkceyhan@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "lxml (>=6.0.1,<7.0.0)",
    "pandas (>=2.3.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "webscraping", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
